[gd_scene load_steps=45 format=3 uid="uid://b47hry70n4bv8"]

[ext_resource type="Texture2D" uid="uid://mya8xj326wio" path="res://Assets/Player/Male_Spritesheet.png" id="1"]
[ext_resource type="Script" path="res://world/Player.gd" id="1_6g4u7"]
[ext_resource type="Texture2D" uid="uid://bpc167mko66i1" path="res://Assets/Player/player_shadow.png" id="3"]
[ext_resource type="Texture2D" uid="uid://ckm4fn0ds5u8" path="res://Assets/Player/!_2.png" id="4"]
[ext_resource type="Texture2D" uid="uid://tatw2bs814ck" path="res://Assets/Player/!_1.png" id="5"]
[ext_resource type="Texture2D" uid="uid://c41iaiuuau7cj" path="res://Assets/Player/!_3.png" id="6"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="2"]
resource_name = "Disappear"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"entered_door"
}]
}

[sub_resource type="Animation" id="3"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="4"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="5"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="6"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="7"]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_turning"
}]
}

[sub_resource type="Animation" id="8"]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_turning"
}]
}

[sub_resource type="Animation" id="9"]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_turning"
}]
}

[sub_resource type="Animation" id="10"]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_turning"
}]
}

[sub_resource type="Animation" id="11"]
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="12"]
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="13"]
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="14"]
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p7jjb"]
_data = {
"Disappear": SubResource("2"),
"IdleDown": SubResource("3"),
"IdleLeft": SubResource("4"),
"IdleRight": SubResource("5"),
"IdleUp": SubResource("6"),
"TurnDown": SubResource("7"),
"TurnLeft": SubResource("8"),
"TurnRight": SubResource("9"),
"TurnUp": SubResource("10"),
"WalkDown": SubResource("11"),
"WalkLeft": SubResource("12"),
"WalkRight": SubResource("13"),
"WalkUp": SubResource("14")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nob25"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mo246"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_avsvk"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2qwms"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="19"]
blend_point_0/node = SubResource("AnimationNodeAnimation_nob25")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_mo246")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_avsvk")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_2qwms")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7t5ex"]
animation = &"TurnLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qfboh"]
animation = &"TurnRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bt3ub"]
animation = &"TurnDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yjodv"]
animation = &"TurnUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="24"]
blend_point_0/node = SubResource("AnimationNodeAnimation_7t5ex")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_qfboh")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_bt3ub")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_yjodv")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h13xe"]
animation = &"WalkLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pt2gl"]
animation = &"WalkRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nmyw4"]
animation = &"WalkDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_beuwx"]
animation = &"WalkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="29"]
blend_point_0/node = SubResource("AnimationNodeAnimation_h13xe")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_pt2gl")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_nmyw4")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_beuwx")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="30"]
advance_mode = 2
advance_condition = &"is_walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="31"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="32"]
advance_mode = 2
advance_condition = &"is_turning"

[sub_resource type="AnimationNodeStateMachineTransition" id="33"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="34"]
advance_mode = 2
advance_condition = &"is_walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="35"]
advance_mode = 2
advance_condition = &"is_turning"

[sub_resource type="AnimationNodeStateMachine" id="36"]
states/Idle/node = SubResource("19")
states/Idle/position = Vector2(253, 86.3888)
states/Start/position = Vector2(32, 99.875)
states/Turn/node = SubResource("24")
states/Turn/position = Vector2(337.667, 169)
states/Walk/node = SubResource("29")
states/Walk/position = Vector2(438.167, 86.4166)
transitions = ["Idle", "Walk", SubResource("30"), "Walk", "Idle", SubResource("31"), "Idle", "Turn", SubResource("32"), "Turn", "Idle", SubResource("33"), "Turn", "Walk", SubResource("34"), "Walk", "Turn", SubResource("35")]
graph_offset = Vector2(-235.072, 8.38506)

[sub_resource type="SpriteFrames" id="38"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 30
slide_on_ceiling = false
safe_margin = 0.001
script = ExtResource("1_6g4u7")

[node name="Shadow" type="Sprite2D" parent="."]
texture = ExtResource("3")
centered = false

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1")
centered = false
offset = Vector2(0, -4)
flip_h = true
hframes = 3
vframes = 3
frame = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p7jjb")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("36")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = false
parameters/conditions/is_turning = false
parameters/conditions/is_walking = false
parameters/Idle/blend_position = Vector2(-0.0193331, 1.01222)
parameters/Turn/blend_position = Vector2(0.145979, 0.169043)
parameters/Walk/blend_position = Vector2(0.00532365, 1.74542)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(8, 8)
zoom = Vector2(5, 5)

[node name="BlockingRayCast2D" type="RayCast2D" parent="."]
position = Vector2(8, 8)
target_position = Vector2(0, 16)
collision_mask = 22
hit_from_inside = true

[node name="LedgeRayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2(8, 8)
collision_mask = 4

[node name="DoorRayCast2D" type="RayCast2D" parent="."]
position = Vector2(8, 8)
target_position = Vector2(0, 8)
collision_mask = 8
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="surprise" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(8, -13)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("38")
